# modern-uuid

./: .gitignore  Acknowledgements.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: publish.yml  test.yml
.tools/: create-release
cmake/: install.cmake  modern-uuid-config.cmake.in  modern-uuid.pc.in
doc/: Building.md  Usage.md  building.md  cuid2-usage.md  nanoid-usage.md  other-uuid-libraries.md  ulid-usage.md  uuid-usage.md
inc/modern-uuid/: bit_packer.h  common.h  cuid2.h  nanoid.h  ulid.h  uuid.h
src/: clocks.cpp  clocks.h  cuid2.cpp  fork_handler.h  nanoid.cpp  node_id.cpp  node_id.h  random_generator.cpp  random_generator.h  threading.h  ulid.cpp  uuid.cpp
test/: CMakeLists.txt  main.cpp  persistence.h  test_basics.cpp  test_bit_packer.cpp  test_cuid2_basics.cpp  test_fmt.cpp  test_fork.cpp  test_internals.cpp  test_nanoid_basics.cpp  test_persistence.cpp  test_sha3.cpp  test_system.cpp  test_ulid_basics.cpp  test_ulid_persistence.cpp  test_util.h  test_uuid_basics.cpp  test_uuid_persistence.cpp
